Реализован rebuild-sql-links
